--- a/src/react-style.scss
+++ b/src/react-style.scss
@@ -1,3 +1,12 @@
+* {
+	scroll-behavior: smooth;
+}
+
+body {
+	box-sizing: border-box;
+	overflow: hidden;
+}
+
 @mixin mix {
 	font-weight: bold;
 	text-align: center;
@@ -6,10 +15,69 @@
 
 
 $varible:40px;
+$--dark:#0e100f;
+$--gradient-macha: linear-gradient( 114.41deg, #0ae448 20.74%, #abff84 65.5% );
+$--gradient-purple-haze: linear-gradient( 153.58deg, #f7bdf8 32.25%, #2f3cc0 92.68% );
+$--color-ui-gradient: radial-gradient( 78.77% 78.77% at 71.71% 30.77%, #f0fcff 0%, #9bedff 67.21%, #98ecff 76.04%, #5be1ff 84.9%, #00bae2 94.79% );
+
+$size: 80px;
+
 $color:rgb(255, 185, 34);
 
 p {
     font-size: $varible - 15;
 	color: $color;
 	@include mix();
+}
+
+
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: black;
+}
+
+.box.green, .gradient-green {
+    color: $--dark;
+    background: $--gradient-macha, url(https://assets.codepen.io/16327/noise-e82662fe.png);
+    background-blend-mode: color-dodge;
+}  
+
+.box.purple, .gradient-purple {
+    color: $--dark;
+    background: $--gradient-purple-haze, url(https://assets.codepen.io/16327/noise.png);
+    background-blend-mode: color-dodge;
+}
+
+.box.blue, .gradient-blue {
+    color: $--dark;
+    background: $--color-ui-gradient, url(https://assets.codepen.io/16327/noise-e82662fe.png);
+    background-blend-mode: color-dodge;
+}
+
+.box {
+    width: 75px;
+    height: 75px;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: $--dark;
+    background: $--gradient-macha, url(https://assets.codepen.io/16327/noise-e82662fe.png);
+    background-blend-mode: color-dodge;
+    font-weight: 600;
+    line-height: 1.2;
+    will-change: transform;
+	margin: 20px;
+}
+
+.mybox {
+	width:$size;
+	height:$size;
+	background-color:$color;
 }
